--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,7 @@
 version: "3"
 
 services:
-  db:
+  mysql:
     image: mysql
     restart: always
     command: --default-authentication-plugin=mysql_native_password --mysqlx=0
@@ -13,6 +13,15 @@ services:
       - MYSQL_PASSWORD=123456 #change to the password you want for user
       - MYSQL_ROOT_PASSWORD=123456 #change to good root password
     ports:
+      - "3307:3306"
+
+  dolt:
+    build: .
+    entrypoint: dolt
+    command: sql-server -H 0.0.0.0
+    volumes:
+      - .:/tesla
+    ports:
       - "3306:3306"
 
   web:
@@ -23,4 +32,5 @@ services:
     ports:
       - "8000:8000"
     depends_on:
-      - db
+      - dolt
+      - mysql
